force-app/main/default/objects/Case_Navigation__mdt/Case_Navigation__mdt.object-meta.xml
<CustomObject>
    <label>Case Navigation Item</label>
    <pluralLabel>Case Navigation Items</pluralLabel>
</CustomObject>