force-app/main/default/objects/Case_Navigation__mdt/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Case Category</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>