force-app/main/default/objects/Case_Navigation__mdt/fields/Title_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Title_Custom_Label__c</fullName>
    <description>The custom label name that contains the actual text string to display.</description>
    <label>Title Custom Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>