force-app/main/default/objects/Case_Navigation__mdt/listViews/Case_Navigation_Items.listView-meta.xml
<ListView>
    <fullName>Case_Navigation_Items</fullName>
    <columns>MasterLabel</columns>
    <columns>Title__c</columns>
    <columns>Title_Custom_Label__c</columns>
    <columns>Description_Custom_Label__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Description__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Image_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>Case Navigation Items</label>
    <language>en_US</language>
</ListView>